--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
-$backgroun_color1:#0c0207;
+$backgroun_color1:#000000;
+$backgroun_color2:#eaeaea;
+
 
 //primary colors
 $cfDev_primaryColor:#01f27f;
