--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -11,7 +11,7 @@
   font-family: $cfDev_primaryFont;
   font-size: 2rem;
   font-weight: 400;
-  color: $cfDev_textPrimaryColor;
+  color: #fff;
   z-index: 50;
   background-color: rgba($color: #000000, $alpha: 0.2);
 }
@@ -46,6 +46,7 @@ li:hover {
   height: 15vh;
   opacity: 0.9;
   background-color: $backgroun_color1;
+  color:$cfDev_textPrimaryColor
 }
 
 .navbar-logo-move {
@@ -69,4 +70,25 @@ li:hover {
     border-radius: 50%;
   }
 
+}
+
+
+//animation
+
+.navbarReveal {
+  animation-name: navbarReveal;
+  animation-delay: 1s;
+  animation-duration: 2s;
+  animation-timing-function: ease;
+  animation-fill-mode: both;
+}
+
+
+@keyframes navbarReveal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
