--- a/src/styles/views/_header2.scss
+++ b/src/styles/views/_header2.scss
@@ -121,4 +121,27 @@ img{
   }
 
 
+  
+
+  .headerOut {
+    animation-name: headerOut;
+    animation-duration: 2s;
+    animation-delay: 5s;
+    animation-timing-function: ease;
+    animation-fill-mode: both;
+  }
+  
+  @keyframes headerOut {
+    from {
+   
+      opacity: 1;
+    }
+    to {
+    
+      transform: translateX(0%) scale(1);;
+    
+      opacity: 0;
+    }
+  }
+  
  
