--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,7 @@
 $backgroun_color1:#000000;
 $backgroun_color2:#eaeaea;
+$backgroun_color3:#1d2428;
+$backgroun_color4:#0f1a1e;
 
 
 //primary colors
@@ -7,7 +9,11 @@ $cfDev_primaryColor:#01f27f;
 $cfDev_secundaryColor:#0c6754;
 $cfDev_tertiaryColor:#12232b;
 $cfDev_cuaternaryColor:#0f443f;
+
+
 //fonts
 
 $cfDev_primaryFont:"Poppins", sans-serif;
 $cfDev_textPrimaryColor:#089f65;
+$cfDev_textSecundaryColor:#696969;
+$cfDev_textTerciaryColor:#dbeaea;
