--- a/src/styles/views/_header2.scss
+++ b/src/styles/views/_header2.scss
@@ -6,6 +6,7 @@
     width: 100vw;
     height:100vh ;
     display: flex;
+    background-color: $backgroun_color3;
     flex-direction: column;
     justify-content: center;
     align-items: center;
