--- a/src/styles/views/_projects.scss
+++ b/src/styles/views/_projects.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 .projects-container {
   min-width: 100vw;
-  background-color: $backgroun_color1;
+  background-color: $backgroun_color4;
   color: $cfDev_textPrimaryColor;
   font-family: $cfDev_primaryFont;
   padding-top: 15vh;
@@ -9,7 +9,7 @@
     font-family: $cfDev_primaryFont;
     font-size: 2.8rem;
     font-weight:400;
-    color: $cfDev_textPrimaryColor;
+    color: $cfDev_textTerciaryColor;
     margin-left: 2%;
 }
 
