--- a/src/styles/components/_servicesCard.scss
+++ b/src/styles/components/_servicesCard.scss
@@ -1,17 +1,11 @@
 @import "../variables";
 .service-card{
-    height: 60vh;
+    height: 50vh;
     width: 20vw;
-    background: rgb(9,13,14);
-    background: linear-gradient(315deg, rgba(9,13,14,1) 35%, rgba(28,37,40,1) 77%);
     color: $cfDev_textTerciaryColor;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 3%;
     font-weight: 400;
     flex-shrink: 0;
+    perspective: 2000px;
    
 
     h2{
@@ -31,6 +25,75 @@
     }
 }
 
+.flip-card{
+    position: relative;
+    row-gap: 3%;
+    width: 100%;
+    height: 100%;
+    transition: all 550ms cubic-bezier(0.1, 0.22, 0.8, 1.13);
+    transform-style: preserve-3d;
+    
+}
+.flip-card:hover{
+    transform: rotateY(-180deg);
+}
+
+
+.flip-card-front{
+    position: absolute;
+    backface-visibility: hidden;
+    
+    background: rgb(9,13,14);
+    background: linear-gradient(315deg, rgba(9,13,14,1) 35%, rgba(28,37,40,1) 77%);
+    border-radius: 15px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    row-gap: 3%;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.flip-card-back{
+    position: absolute;
+    backface-visibility: hidden;
+    background: rgb(1,242,127);
+    background: linear-gradient(315deg, rgba(1,242,127,1) 0%, rgba(12,103,84,1) 72%, rgba(15,68,63,1) 100%);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: blue;
+    row-gap: 3%;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(-180deg);
+
+
+}
+
+
+
+
+
+.service-icon-container-front{
+    width: 30%;
+    aspect-ratio: 1;
+    margin-top: 5%;
+    svg{
+        fill:$cfDev_primaryColor;
+        stroke: $cfDev_primaryColor;
+        stroke-width: 1;
+
+    }
+}
+
 
 .service-icon-container{
     width: 30%;
@@ -43,4 +106,5 @@
 
     }
 }
+
 
