--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -11,7 +11,8 @@
     font-family: $cfDev_primaryFont;
     font-size: 2.8rem;
     font-weight:400;
-    color: $cfDev_textPrimaryColor;
+    font-family: $cfDev_primaryFont;
+    color: $cfDev_textTerciaryColor;
 }
 }
 
@@ -97,7 +98,7 @@ button{
     h4{
         font-size: 3rem;
         font-weight: 600;
-        color: $cfDev_textTerciaryColor;
+        color: $cfDev_textPrimaryColor;
     }
 
     p{
