FEAT: mobile size

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,10 @@
 @import"./components/projectCard";
 @import"./views/projects";
 @import"./components//carrusel";
+@import"./views/clients";
+@import "./components/mobileNavbar";
+@import "./components/mobileMenu";
+
 
 
 *{
