--- a/src/styles/components/_carrusel.scss
+++ b/src/styles/components/_carrusel.scss
@@ -2,10 +2,12 @@
 
 .seccion-carrusel{
   position: relative;
+  text-align: center;
   display: flex;
   justify-content: center;
     min-width: 100vw;
-    height: 100vh;
+    height: 50vh;
+    background-color: $backgroun_color1;
     color:white;
     ::-webkit-scrollbar-thumb {
       background-color: transparent;
@@ -41,6 +43,7 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+  filter: grayscale(100%);
   
   
 }
@@ -56,9 +59,10 @@
   svg {
       height: 70px;
       width: 70px;
-      opacity: 0.5;
+      opacity: 0.2;
       &:hover{
           color: $cfDev_primaryColor;
+          opacity: 0.5;
         }
   }
 }
@@ -73,9 +77,10 @@
   svg {
     height: 70px;
     width: 70px;
-    opacity: 0.5;
+    opacity: 0.2;
     &:hover{
       color: $cfDev_primaryColor;
+      opacity: 0.5;
     }
   }
 }
@@ -87,7 +92,7 @@
   position: absolute;
   bottom: 5%;
 width: 10%;
-height: 6%;
+height: 11%;
 }
 
 .bullet{
@@ -116,13 +121,13 @@ height: 6%;
   border-radius: 20px;
 
   h3{
-      font-size: 5rem;
+      font-size: 4rem;
       text-transform:uppercase;
       
   }
 
   p{
-      font-size: 3.5rem;
+      font-size: 3rem;
       text-transform:uppercase;
   }
 }
@@ -149,4 +154,30 @@ height: 6%;
     transform: translateX(0%) ;
     opacity: 1;
   }
+}
+
+
+@media screen and (max-width:678px) {
+  .container-bullets{
+
+  width: 40%;
+  height: 15%;
+  }
+
+
+  .carrusel-center-container{
+  
+  
+    h3{
+        font-size: 3rem;
+        text-transform:uppercase;
+        
+    }
+  
+    p{
+        font-size: 2rem;
+  
+    }
+  }
+  
 }
