--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -52,3 +52,46 @@
     }
 }
 
+
+@media screen and (max-width:678px) {
+
+    .footer{
+        height: 50vh;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer-logo{
+        width: 75%;
+        height: 30%;
+        margin-left: 1%;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .footer-social-media{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10%;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-social-media-icons{
+    width: 70%;
+    height: 32%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    svg{
+        height: 90%;
+        width: 90%;
+    }
+}
+
+}
