--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -11,13 +11,13 @@
   font-family: $cfDev_primaryFont;
   font-size: 2rem;
   font-weight: 400;
-  color: #fff;
-  z-index: 50;
+  color:$backgroun_color2;
+  z-index: 40;
   background-color: rgba($color: #000000, $alpha: 0.2);
 }
 
 .navbar-menu {
-  width: 50%;
+  width: 45%;
   margin-right: 2%;
 
   ul {
@@ -29,12 +29,15 @@
 
 .navbar-logo {
   width: 15%;
-  height: 55%;
+  height: 100%;
+
 
   img {
-    width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
+    opacity: 0.7;
+
   }
 }
 
