--- a/src/styles/components/_servicesCard.scss
+++ b/src/styles/components/_servicesCard.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 .service-card{
-    height: 50vh;
-    width: 20vw;
+    height: 100%;
+    width: 100%;
     color: $cfDev_textTerciaryColor;
     font-weight: 400;
     flex-shrink: 0;
