--- a/src/styles/views/_header2.scss
+++ b/src/styles/views/_header2.scss
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1; /* Asegura que el logo esté por encima del video */
   width: 50%;
   height: 30%;
   
@@ -36,21 +35,22 @@
 
 
 .header2-logo-container{
-
     background-size: contain;
     background-position: center;
     width: 100%;
-    height: 24vh;
+
+    img{
+      height: 100%;
+      width: 100%;
+      object-fit:contain;
+      opacity: 1;
+      z-index: -1;
+  }
+  
    
 }
 
-img{
-    height: 100%;
-    width: 100%;
-    object-fit:cover;
-    opacity: 1;
-    z-index: -1;
-}
+
 
 
 .header2-fondo{
@@ -76,7 +76,7 @@ img{
     display: block;
     white-space: nowrap;
     border-right: 4px solid transparent;
-    animation: typing 1.5s steps(25) 2s, blink 0.5s infinite step-end alternate 2s,
+    animation: typing 1.5s steps(29) 2s, blink 0.5s infinite step-end alternate 2s,
       backgroundEfect 20s 3s infinite linear;
     overflow: hidden;
     animation-fill-mode: both;
@@ -93,7 +93,7 @@ img{
       width: 0;
     }
     to {
-      width: 25ch;
+      width: 29ch;
     }
   }
   
@@ -146,3 +146,53 @@ img{
   }
   
  
+
+
+  @media screen and (max-width:678px) {
+
+
+    .header2-container{
+
+    
+        h3{
+        
+            font-size: 2.5rem;
+        }
+       
+    }
+
+    .header2-center-container{
+      padding-top: 12vh;
+      
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 1; /* Asegura que el logo esté por encima del video */
+      width: 130%;
+      height: 40%;
+
+      
+    }
+    
+    
+    .header2-logo-container{
+    
+        background-size: contain;
+        background-position: center;
+        width: 100%;
+        height: 20vh;
+       
+    }
+    
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit:cover;
+        opacity: 1;
+        z-index: -1;
+    }
+    
+    
+    
+  }
