FEAT: logo mobile nav

--- a/src/styles/components/_mobileNavbar.scss
+++ b/src/styles/components/_mobileNavbar.scss
@@ -15,8 +15,8 @@
 }
 
 .mobile-navbar-logo-container{
-    height: 80%;
-    aspect-ratio: 3;
+    margin-left: 2%;
+    height: 65%;
   
 
     img{
