--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -123,6 +123,9 @@
     height: 15%;
     align-items: center;
     color: $cfDev_primaryColor;
+    a{
+      text-decoration: none;
+    }
   }
 
   svg:hover {
