--- a/src/styles/views/_services.scss
+++ b/src/styles/views/_services.scss
@@ -49,3 +49,16 @@
 
  
 }
+
+@media screen and (max-width:1200px) {
+
+  .services-center-container {
+    margin: 0 auto;
+    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(2, 40vw);
+    grid-template-rows: repeat(3, 31vw);;
+    gap: 30px;
+  }
+
+}
