--- a/src/styles/components/_mobileMenu.scss
+++ b/src/styles/components/_mobileMenu.scss
@@ -23,12 +23,17 @@
     width: 80%;
     height: 50%;
     ul{
-        
+   
         height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         list-style-type: none;
+
+        li{
+
+            text-align: center;
+        }
         li:active{
             color:$cfDev_primaryColor
         }
@@ -44,6 +49,11 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    a{
+        text-decoration: none;
+        color:$cfDev_textPrimaryColor;
+    }
 }
 
 
