--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -13,7 +13,7 @@
   font-weight: 400;
   color:$backgroun_color2;
   z-index: 40;
-  background-color: rgba($color: #000000, $alpha: 0.2);
+  background-color: rgba($color: #000000, $alpha: 0.05);
 }
 
 .navbar-menu {
@@ -55,7 +55,7 @@ li:hover {
 
 .navbar-logo-move {
   width: 15%;
-  height: 55%;
+  height: 100%;
 }
 
 
@@ -77,6 +77,7 @@ li:hover {
 }
 
 
+
 //animation
 
 .navbarReveal {
@@ -95,4 +96,24 @@ li:hover {
   to {
     opacity: 1;
   }
+}
+
+
+
+@media screen and (max-width:1200px) {
+
+  .navbar-menu {
+    width: 60%;
+
+  }
+
+}
+
+@media screen and (max-width:860px) {
+
+  .navbar-menu {
+    width: 70%;
+
+  }
+
 }
