--- a/src/styles/views/_aboutUs.scss
+++ b/src/styles/views/_aboutUs.scss
@@ -1,98 +1,104 @@
-.aboutUs-container{
-    width: 100vw;
-    height: fit-content;
-    background-color: $backgroun_color4;
-    color:$cfDev_textTerciaryColor;
-    padding-top: 15vh;
-    padding-bottom:2% ;
+.aboutUs-container {
+  width: 100vw;
+  height: fit-content;
+  background-color: $backgroun_color4;
+  color: $cfDev_textTerciaryColor;
+  padding-top: 15vh;
+  padding-bottom: 2%;
 
-    h3{
-        font-family: $cfDev_primaryFont;
-        color:$cfDev_textSecundaryColor;
-        font-size: 2.8rem;
-        font-weight:400;
-        color: $cfDev_textTerciaryColor;
+  h3 {
+    font-family: $cfDev_primaryFont;
+    color: $cfDev_textSecundaryColor;
+    font-size: 2.8rem;
+    font-weight: 400;
+    color: $cfDev_textTerciaryColor;
+  }
+}
+
+.aboutUs-intro {
+  padding-top: 2%;
+  margin: 0 auto;
+  width: 70%;
+  height: fit-content;
+  p {
+    font-size: 3rem;
+    font-weight: 500;
+    color: $cfDev_textSecundaryColor;
+    text-align: center;
+  }
+}
+
+.aboutUs-center-container {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+}
+
+.section-title {
+  margin-left: 2%;
+}
+
+.aboutUs-article {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 5%;
+
+  h4 {
+    font-family: $cfDev_primaryFont;
+    font-size: 2.8rem;
+    font-weight: 300;
+  }
+  p {
+    font-family: $cfDev_primaryFont;
+    color: $cfDev_textSecundaryColor;
+    font-size: 1.7rem;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+
+.aboutUs-profile {
+  width: 40%;
+  aspect-ratio: 1;
+  background: $backgroun_color2;
+  border-radius: 50%;
+  overflow: hidden;
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+}
+
+@media screen and (max-width: 678px) {
+  .aboutUs-intro {
+    width: 90%;
+    p {
+      font-size: 2rem;
+      font-weight: 400;
     }
-}
+  }
 
-.aboutUs-center-container{
-    height: fit-content;
+  .aboutUs-center-container {
     width: 100%;
     display: flex;
-    
-}
-
-.section-title{
-    margin-left: 2%;
-}
-
-
-
-.aboutUs-article{
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    row-gap: 5%;
+  }
 
-    h4{
-        font-family: $cfDev_primaryFont;
-        font-size: 2.8rem;
-        font-weight: 300;
+  .aboutUs-container {
+    h3 {
+      font-size: 4rem;
+      text-align: center;
     }
-    p{
-        font-family: $cfDev_primaryFont;
-        color:$cfDev_textSecundaryColor;
-        font-size: 1.7rem;
-        margin-left: 10%;
-        margin-right: 10%;
+  }
 
-    }
-}
-
-.aboutUs-profile{
-    width: 40%;
-    aspect-ratio: 1;
-    background:$backgroun_color2;
-    border-radius: 50%;
-    overflow: hidden;
-    
-
-    img{
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-    };
-
-   
-}
-
-
-
-@media screen and (max-width:678px) {
-
-    .aboutUs-center-container{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-       
-
-        
-    }
-
-    .aboutUs-container{
-        h3{
-            font-size: 4rem;
-            text-align: center;
-        }
-    }
-
-    .aboutUs-article{
-        height: 75vh;}
-
-    
-
+  .aboutUs-article {
+    height: 75vh;
+  }
 }
