--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -1,7 +1,9 @@
 @import "../variables";
 
 .contact-container {
+ 
   padding-top: 15vh;
+  padding-bottom: 15vh;
   width: 100vw;
   background-color: $backgroun_color1;
   font-family: $cfDev_primaryFont;
@@ -26,10 +28,13 @@
 }
 
 .contact-center-container {
+  position: relative;
   margin: 0 auto;
   width: 90%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
 }
 
 .contact-internal-contain {
@@ -56,6 +61,9 @@
     height: 9%;
     border-radius: 15px;
     color: black;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 1.5rem;
   }
 
   .input-warning {
@@ -68,6 +76,10 @@
     width: 100%;
     height: 25%;
     border-radius: 15px;
+    padding-top:5px ;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 1.5rem;
   }
 
   button {
