--- a/src/styles/views/_header2.scss
+++ b/src/styles/views/_header2.scss
@@ -18,6 +18,7 @@
         font-size: 3.5rem;
         font-weight:400;
         color: $cfDev_primaryColor;
+        margin-top: 2%;
     }
    
 }
@@ -29,7 +30,8 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
-  height: 30%;
+  height: fit-content;
+ 
   
 }
 
@@ -38,6 +40,7 @@
     background-size: contain;
     background-position: center;
     width: 100%;
+  
 
     img{
       height: 100%;
@@ -157,6 +160,8 @@
         h3{
         
             font-size: 2.5rem;
+            margin-top: 5%;
+            
         }
        
     }
@@ -170,7 +175,7 @@
       align-items: center;
       z-index: 1; /* Asegura que el logo esté por encima del video */
       width: 130%;
-      height: 40%;
+      height: fit-content;
 
       
     }
@@ -182,7 +187,7 @@
         background-position: center;
         width: 100%;
         height: 20vh;
-       
+
     }
     
     img{
@@ -195,4 +200,41 @@
     
     
     
+  }
+
+
+  @media screen and (max-width:1200px) {
+
+
+    .header2-container{
+
+   
+    
+        h3{
+       
+            font-size: 3rem;
+       
+        
+        }
+       
+    }
+
+  }
+
+  @media screen and (max-width:1000px) {
+
+
+    .header2-container{
+
+   
+    
+        h3{
+       
+            font-size: 2.5rem;
+       
+        
+        }
+       
+    }
+
   }
