FEAT: overflow hidden

--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .contact-internal-contain {
