--- a/src/styles/views/_aboutUs.scss
+++ b/src/styles/views/_aboutUs.scss
@@ -22,9 +22,9 @@
   height: fit-content;
   p {
     font-size: 3rem;
-    font-weight: 500;
+    font-weight: 400;
     color: $cfDev_textSecundaryColor;
-    text-align: center;
+    text-align: justify;
   }
 }
 
@@ -56,6 +56,7 @@
     font-family: $cfDev_primaryFont;
     color: $cfDev_textSecundaryColor;
     font-size: 1.7rem;
+    text-align: start;
     margin-left: 10%;
     margin-right: 10%;
   }
@@ -78,7 +79,7 @@
 
 @media screen and (max-width: 678px) {
   .aboutUs-intro {
-    width: 90%;
+    width: 85%;
     p {
       font-size: 2rem;
       font-weight: 400;
@@ -93,7 +94,7 @@
 
   .aboutUs-container {
     h3 {
-      font-size: 4rem;
+      font-size: 3rem;
       text-align: center;
     }
   }
