--- a/src/styles/views/_header2.scss
+++ b/src/styles/views/_header2.scss
@@ -151,57 +151,7 @@
  
 
 
-  @media screen and (max-width:678px) {
-
-
-    .header2-container{
-
-    
-        h3{
-        
-            font-size: 2.5rem;
-            margin-top: 5%;
-            
-        }
-       
-    }
-
-    .header2-center-container{
-      padding-top: 12vh;
-      
-      position: absolute;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      z-index: 1; /* Asegura que el logo esté por encima del video */
-      width: 130%;
-      height: fit-content;
-
-      
-    }
-    
-    
-    .header2-logo-container{
-    
-        background-size: contain;
-        background-position: center;
-        width: 100%;
-        height: 20vh;
-
-    }
-    
-    img{
-        height: 100%;
-        width: 100%;
-        object-fit:cover;
-        opacity: 1;
-        z-index: -1;
-    }
-    
-    
-    
-  }
-
+ 
 
   @media screen and (max-width:1200px) {
 
@@ -237,4 +187,55 @@
        
     }
 
+  }
+
+
+  @media screen and (max-width:678px) {
+
+
+    .header2-container{
+
+    
+        h3{
+        
+            font-size: 2.5rem;
+            margin-top: 5%;
+            
+        }
+       
+    }
+
+    .header2-center-container{
+      
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 1; /* Asegura que el logo esté por encima del video */
+      width: 130%;
+      height: fi;
+
+      
+    }
+    
+    
+    .header2-logo-container{
+    
+        background-size: contain;
+        background-position: center;
+        width: 55%;
+    
+
+    }
+    
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit:cover;
+        opacity: 1;
+        z-index: -1;
+    }
+    
+    
+    
   }
