--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -24,6 +24,7 @@
     list-style: none;
     display: flex;
     justify-content: space-around;
+    li{cursor: pointer}
   }
 }
 
@@ -37,6 +38,7 @@
     object-fit: cover;
     object-position: center;
     opacity: 0.7;
+    cursor: pointer
 
   }
 }
@@ -56,6 +58,7 @@ li:hover {
 .navbar-logo-move {
   width: 15%;
   height: 100%;
+  cursor: pointer
 }
 
 
