--- a/src/styles/views/_aboutUs.scss
+++ b/src/styles/views/_aboutUs.scss
@@ -24,7 +24,7 @@
     font-size: 2.5rem;
     font-weight: 400;
     color: $cfDev_textSecundaryColor;
-    text-align: justify;
+    text-align: center;
   }
 }
 
@@ -56,7 +56,7 @@
     font-family: $cfDev_primaryFont;
     color: $cfDev_textSecundaryColor;
     font-size: 1.7rem;
-    text-align: start;
+    text-align: center;
     margin-left: 10%;
     margin-right: 10%;
   }
