--- a/src/styles/components/_mobileMenu.scss
+++ b/src/styles/components/_mobileMenu.scss
@@ -60,3 +60,30 @@
 .mobileMenuOpen{
     transform: translateX(0%);
 }
+
+
+.flag-mobile-container{
+    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+  }
+
+
+
+.flag-mobile{
+    opacity: 0.5;
+    width: 3.5rem;
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    
+}
+
+.flag-mobile-focus{
+opacity: 1;
+}
