--- a/src/styles/components/_mobileMenu.scss
+++ b/src/styles/components/_mobileMenu.scss
@@ -65,9 +65,13 @@
 .flag-mobile-container{
     margin: 0 auto;
     width: 100%;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    svg{
+        border-radius: 50%;
+      }
  
   }
 
@@ -81,6 +85,7 @@
     align-items: center;
     margin-left: 5%;
     margin-right: 5%;
+    
     
 }
 
